parse-display/tests/compile_fail/from_str/empty_to_some.rs
use parse_display::FromStr;

#[derive(FromStr)]
struct X {
    #[display(opt)]
    value: Option<u32>,
}

fn main() {}
